# Gasyori100knock

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run.sh
answers/: hist.cpp  hist.py
answers/1/: main.cpp  main.py
answers/10/: main.cpp  main.py
answers/11/: main.cpp  main.py
answers/12/: .main.cpp.swp  .main.py.swp  main.cpp  main.py
answers/13/: main.cpp  main.py
answers/14/: main.cpp  main.py
answers/15/: main.cpp  main.py
answers/16/: main.cpp  main.py
answers/17/: main.cpp  main.py
answers/18/: main.cpp  main.py
answers/19/: main.cpp  main.py
answers/2/: main.cpp  main.py
answers/20/: main.cpp  main.py
answers/21/: main.cpp  main.py
answers/22/: main.cpp  main.py
answers/23/: main.cpp  main.py
answers/24/: main.cpp  main.py
answers/25/: main.cpp  main.py
answers/26/: main.cpp  main.py
answers/3/: main.cpp  main.py
answers/4/: main.cpp  main.py
answers/5/: main.cpp  main.py
answers/6/: main.cpp  main.py
answers/7/: main.cpp  main.py
answers/8/: main.cpp  main.py
answers/9/: main.cpp  main.py
