cmake_minimum_required(VERSION 3.1)
SET(Q "1" CACHE STRING "Some user-specified option")
project (${Q})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../bin")
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(cmd answers/${Q}/main.cpp)
target_link_libraries(cmd ${OpenCV_LIBS})
